# HLC

./: CMakeLists.txt  EntityRequestHandler.cpp  EntityRequestHandler.h  EntityRequestHandlerFactory.cpp  EntityRequestHandlerFactory.h  MainListener.cpp
src/: EntityRequestHandlerFactory.cpp  MessageAdder.cpp  MessageGetter.cpp
